- -> Removed
! -> Note

11-Dec-2010 Jean-Marie Simonet
 # [#23715] Add Site Name to Page Title not working for articles/newsfeeds/weblinks selected via a category. Thanks Mark
 
11-Dec-2010 Christophe Demko
 # [#23720] *Changing Home set to ALL languages to another language and reverting = 500 + unpublish message
 # [#22648] function isCompatible incorrectly checks current version (Mark Dexter)
 
10-Dec-2010 Mark Dexter
^ [#22730] Assign usergroup to guests (Dennis Hermacki) 

10-Dec-2010 Christophe Demko
 # [#23589] mod_latestnews ignores "show featured" setting

10-Dec-2010 Jean-Marie Simonet
 # [#23710] Improve fieldset input CSS definition for RTL language. Thanks Itzik and Andrea.
 # [#23709] add new article - missing RTL css definition for editor article button. Thanks Itzik and Andrea.
 # [#23711] Allowing default text to be translatable in form fields. Thanks Christophe
 $- [#22091] Global configuration System: help server string updated. helpsites-15.xml deleted. helpsites-16.xml updated.
 # [#23714] Misc Hathor css fixes. Thanks Andrea.
 $ [#23713] "User Manager: Edit Access Level" has some small errors. Thanks Peter and Bill.
 $ [#23712] "User Manager: Add New View Permission Level" label is not logical. Thanks Peter and Bill
 
09-Dec-2010 Mark Dexter
# [#23695] Apply patch 23034 to contacts and newsfeeds
# [#23690] Fullpath disclosure in template error files

09-Dec-2010 Christophe Demko
 # [#22725] Update Manager Fails (Dennis Hermacki)
 # [#23700] Lang switcher is redirecting users to home page depending of languages when lang filter is off + SEF plugin is doing some work when SEF is OFF
 # [#23702] Javascript out of sync between normal and uncompressed file (Rouven Weßling)

09-Dec-2010 Jean-Marie Simonet
[#23671] some Chinese glyphs break SEF when using unicode urls. Thanks Mark.

08-Dec-2010 Jean-Marie Simonet
 # [#23677] RTL header issue in Bluestork. Thanks Andrea.

08-Dec-2010 Mark Dexter